k8s/api-gateway-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-gateway
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - "api.ciy.localhost"
  rules:
    - backendRefs:
        - name: api-gateway
          port: 8080
