k8s/user-service-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-service
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - "auth.ciy.localhost"
  rules:
    - backendRefs:
        - name: user-service
          port: 8080
